adding single view for data

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="navbar-container">
       <div class="navbar-brand">
-        <a href="/" class="navbar-logo">MySite</a>
+        <img src="../assets/logo.png" style="width: 40%; height: auto;"/>
       </div>
       <button class="navbar-toggle" aria-label="Toggle navigation">
         <span class="toggle-bar"></span>
@@ -9,10 +9,10 @@
         <span class="toggle-bar"></span>
       </button>
       <ul class="navbar-menu">
-        <li><a href="/" class="navbar-link">Home</a></li>
+        <li><a href="/accueil" class="navbar-link">Accueil</a></li>
         <li><a href="/enregistrement" class="navbar-link">Enregistrer</a></li>
         <li><a href="/contact" class="navbar-link">Contact</a></li>
-        <li><a href="/" class="navbar-link">Logout</a></li>
+        <li><a href="/" class="navbar-link">Se deconnecter</a></li>
       </ul>
     </div>
   </nav>
