--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -97,7 +97,7 @@
             <input type="password" id="password" placeholder="Mot de passe" name="password" required>
           </div>
           <div class="form-input">
-            <button>Se Connecter</button>
+            <button>Connexion</button>
           </div>
         </form>
       </div>
