added admin template

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -12,7 +12,7 @@
       <li><a href="/accueil" class="navbar-link">Accueil</a></li>
       <li><a href="/enregistrement" class="navbar-link">Enregistrer</a></li>
       <li><a href="/compte" class="navbar-link">Contact</a></li>
-      <li><a href="/" class="navbar-link">Se deconnecter</a></li>
+      <li><a class="navbar-link" id="logout">Se deconnecter</a></li>
     </ul>
   </div>
 </nav>
@@ -32,7 +32,7 @@
       <li><a href="/accueil" class="sidebar-link">Accueil</a></li>
       <li><a href="/enregistrement" class="sidebar-link">Enregistrer</a></li>
       <li><a href="/compte" class="sidebar-link">Profile</a></li>
-      <li><a href="/" class="sidebar-link">Deconnexion</a></li>
+      <li><a class="sidebar-link" id="logout">Deconnexion</a></li>
   </ul>
   
 
