--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -26,7 +26,7 @@
             </div>
           
              <span class="logout-spn" >
-              <a href="#" style="color:#fff;">LOGOUT</a>  
+                <a href="#" id="logout-link" style="color:#fff;">DECONNEXION</a> 
     
             </span>
         </div>
@@ -38,19 +38,20 @@
              
     
     <li >
-                    <a href="/admin" ><i class="fa fa-truck "></i>Tableau de bord <!--<span class="badge">Included</span>--></a>
+                    <a href="/administrateur" ><i class="fa fa-truck "></i>Tableau de bord <!--<span class="badge">Included</span>--></a>
                 </li>
                
     
                 <li>
-                    <a href="/ui"><i class="fa fa-users "></i>Utilisateurs <!-- <span class="badge">Included</span>--></a>
+                    <a href="/utilisateurs"><i class="fa fa-users "></i>Utilisateurs <!-- <span class="badge">Included</span>--></a>
                 </li>
                 <li class="active-link">
-                    <a href="/blank"><i class="fa fa-edit "></i>Profile <!-- <span class="badge">Included</span>--></a>
+                    <a href="/mon-profile"><i class="fa fa-edit "></i>Profile <!-- <span class="badge">Included</span>--></a>
                 </li>
     
     
     
+            <!--
              <li>
                     <a href="#"><i class="fa fa-qrcode "></i>My Link One</a>
                 </li>
@@ -66,10 +67,12 @@
                 </li>
                  <li>
                     <a href="#"><i class="fa fa-edit "></i>My Link Five </a>
-                </li>
+                </li>    
+            -->
             </ul>
                         </div>
     
     </nav>
+    <script src="/scripts/admin_navbar.js"></script>
 </body>
 </html>
