added datatables on home

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo.png">
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="../assets/logo.png">
+
+    <script src="assets/js/jquery-1.10.2.js"></script>
+   
+    <link href="/scripts/datatables.min.css" rel="stylesheet">
+ 
+    <script src="/scripts/datatables.min.js"></script>
     <script src="/scripts/xslx.min.js"></script>
 
    
@@ -36,10 +42,7 @@
         </table>
     </div>
 
-    <div class="pagination">
-        <button id="prevPage" disabled>Previous</button>
-        <button id="nextPage">Next</button>
-    </div>
+    
 
 
     <script src="/scripts/accueil.js">
