--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -391,7 +391,7 @@
       font-weight: 500;
       font-size: 16px;
       line-height: 24px;
-      color: #536387;
+      color: #07471a;
     }
     .formbold-steps li span {
       display: flex;
@@ -407,10 +407,10 @@
       color: #536387;
     }
     .formbold-steps li.active {
-      color: #07074D;;
+      color: #044915;
     }
     .formbold-steps li.active span {
-      background: #6A64F1;
+      background: darkgreen;
       color: #FFFFFF;
     }
   
@@ -439,7 +439,7 @@
       box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
     }
     .formbold-form-label {
-      color: #07074D;
+      color: #014212;
       font-weight: 500;
       font-size: 14px;
       line-height: 24px;
@@ -481,7 +481,7 @@
       box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.12);
     }
     .formbold-confirm-btn.active {
-      background: #6A64F1;
+      background: darkgreen;
       color: #FFFFFF;
     }
   
@@ -507,7 +507,7 @@
       cursor: pointer;
       background: #FFFFFF;
       border: none;
-      color: #07074D;
+      color: darkgreen;
       font-weight: 500;
       font-size: 16px;
       line-height: 24px;
@@ -525,7 +525,7 @@
       padding: 10px 25px;
       border: none;
       font-weight: 500;
-      background-color: #6A64F1;
+      background-color: darkgreen;
       color: white;
       cursor: pointer;
     }
