--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -6,7 +6,7 @@
  <link rel="shortcut icon" type="image/png" sizes="32x32" href="../assets/logo.png">
     <style>
       body{
-        background-color:#f5f5f5;
+        background-color: lightgray;
         font-family:Ebrima;
       }
       .overall{
@@ -53,7 +53,7 @@
         margin-bottom: 20px;
       }
       button{
-        background: #60c7c1 !important;
+        background: darkgreen !important;
         border: none;
         min-height: 40px;
         border-radius: 2px;
