--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -96,7 +96,7 @@
   </div>
 
   <!-- Hamburger Menu (visible on small screens) -->
-  <div class="hamburger" id="hamburger">
+  <div class="hamburger" id="hamburger" style="color: darkred;">
     ☰
   </div>
 
