changed few things

--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -315,7 +315,7 @@
                 <input
                 type="number"
                 name="firstname"
-                placeholder="Andrio"
+                placeholder="Nombre de jours"
                 id="duree"
                 class="formbold-form-input"
                 />
