working on the report

--- a/views/admin/Index.ejs
+++ b/views/admin/Index.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
+
     <title>Administrateur</title>
 
     <script src="/scripts/admin_auth.js" defer></script>
@@ -20,6 +22,7 @@
   
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="/scripts/xslx.min.js"></script>
+    <script src="/assets/js/exceljs.min.js"></script>
     <style>
         .export {
             background-color: green;
